--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
+include_directories(./socketlog)
+
 add_subdirectory(socketlog)
 
 add_subdirectory(examples)
